--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -118,7 +118,7 @@ input, select, textarea {
 
 		a:hover {
 			border-bottom-color: transparent;
-			color: #4acaa8 !important;
+			color: #01255e !important;
 		}
 
 	strong, b {
@@ -1786,7 +1786,7 @@ input, select, textarea {
 	}
 
 	header.major h2 {
-		color: #4acaa8;
+		color: #01255e;
 		font-size: 3.5em;
 	}
 
@@ -1849,7 +1849,7 @@ input, select, textarea {
 		input[type="email"]:focus,
 		select:focus,
 		textarea:focus {
-			border-color: #4acaa8;
+			border-color: #01255e;
 		}
 
 	select {
@@ -1954,7 +1954,7 @@ input, select, textarea {
 
 		input[type="checkbox"]:focus + label:before,
 		input[type="radio"]:focus + label:before {
-			border-color: #4acaa8;
+			border-color: #01255e;
 		}
 
 	input[type="checkbox"] + label:before {
@@ -2035,7 +2035,7 @@ input, select, textarea {
 		border-radius: 100%;
 		display: inline-block;
 		color: white;
-		background-color: #4acaa8;
+		background-color: #01255e;
 		text-align: center;	
 		padding-top: 4px;
 	}
@@ -2046,7 +2046,7 @@ input, select, textarea {
 	}
 
 	.contact-icon {
-		color: #4acaa8;
+		color: #01255e;
 		/* margin-right: 10px; */
 		font-size: 24px;
 	}
@@ -2464,7 +2464,7 @@ input, select, textarea {
 			}
 
 			ul.feature-icons li:before {
-				background: #4acaa8;
+				background: #01255e;
 				border-radius: 100%;
 				color: #ffffff;
 				display: block;
@@ -2680,7 +2680,7 @@ input, select, textarea {
 		input[type="reset"].primary,
 		input[type="button"].primary,
 		.button.primary {
-			background-color: #4acaa8;
+			background-color: #01255e;;
 			color: #ffffff !important;
 		}
 
@@ -2762,8 +2762,8 @@ input, select, textarea {
 		-webkit-justify-content: space-between;
 		-ms-justify-content: space-between;
 		justify-content: space-between;
-		background: #4acaa8;
-		color: #d2f2e9;
+		background: #01255e;
+		color: #e8f3fc;
 		height: 100%;
 		overflow-y: auto;
 		position: fixed;
@@ -2771,6 +2771,7 @@ input, select, textarea {
 		top: 0;
 		width: 23em;
 		right: 0;
+		box-shadow: -6px 0px 10px 1px #aaaaaa;
 	}
 
 		#header h1, #header h2, #header h3, #header h4, #header h5, #header h6 {
@@ -2782,11 +2783,11 @@ input, select, textarea {
 			}
 
 		#header header p {
-			color: #b7eadc;
+			color: #ffffff
 		}
 
 		#header a {
-			color: #d2f2e9;
+			color: #ffffff
 		}
 
 			#header a:hover {
@@ -2813,7 +2814,7 @@ input, select, textarea {
 			}
 
 			#header > header p {
-				color: #d2f2e9;
+				color: #ffffff;
 				font-style: italic;
 				margin: 1em 0 0 0;
 			}
@@ -2834,7 +2835,7 @@ input, select, textarea {
 			}
 
 				#header > footer .icons li a {
-					color: #b7eadc;
+					color: #ffffff;
 				}
 
 		#header > nav {
@@ -2851,7 +2852,7 @@ input, select, textarea {
 			}
 
 				#header > nav ul li {
-					border-top: solid 2px #5ccfb1;
+					border-top: solid 2px #ffffff;
 					display: block;
 					padding: 0;
 				}
@@ -2866,11 +2867,13 @@ input, select, textarea {
 						display: block;
 						padding: 0.85em 0;
 						text-decoration: none;
+						text-align: left;
+						padding-left: 16px;
 					}
 
 						#header > nav ul li a.active {
 							background: #fff;
-							color: #4acaa8 !important;
+							color: #01255e !important;
 						}
 
 					#header > nav ul li:first-child {
@@ -3012,6 +3015,10 @@ input, select, textarea {
 				font-size: 12pt;
 			}
 
+			#header {
+				box-shadow: none;
+			}
+
 		/* Image */
 
 			.image.left, .image.right {
@@ -3138,7 +3145,7 @@ input, select, textarea {
 					}
 
 					#titleBar .toggle:before {
-						background: #4acaa8;
+						background: #01255e;;
 						color: #ffffff;
 						content: '\f0c9';
 						display: block;
